--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,6 +17,9 @@
     <title>Blog!</title>
     {% endif %}
 
+    <link rel = "icon" href =  
+    "/media/logo.jpg" type = "image/x-icon">
+
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
 
